# openfmb.adapters.launcher

./: Cargo.toml  README.md  config.yaml
src/: main.rs
src/configs/: mod.rs
