# SPDX-FileCopyrightText: 2022 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "adapters-launcher"
version = "0.1.0"
authors = ["coryn <cory@openenergysolutionsinc.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.4.0", features = ["macros", "sync", "rt-multi-thread", "time", "process"] }
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9"
ctrlc = "3.1.9"